--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,16 @@
-API_KEY = # API key for client
-DB_URL  = # MongoDB URI
+# General
+APIKEY  = # API key for client
 GAMES   = # List of games to keep stats on - see documentation at docs.boardgaming.icu
+
+# Database
+DBURL   = # MongoDB URI
+
+# SMTP
+    # Mail from name and mail address
+MAILFROM=
+MAILADDR=
+    # Mail server settings 
+MAILSERV= # server address
+MAILPORT= # server port
+MAILPASS= # server password
+MAILUSER= # mail user
