Add captcha verification code

--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,22 @@
 # General
 APIKEY  = # API key for client
 GAMES   = # List of games to keep stats on - see documentation at docs.boardgaming.icu
+SITENAME= # e.g. boardgaming.icu
+SITEADDR= # e.g. https://boardgaming.icu
 
 # Database
 DBURL   = # MongoDB URI
 
 # SMTP
     # Mail from name and mail address
-MAILFROM=
-MAILADDR=
+MAILFROM= # e.g noreply
+MAILADDR= # e.g noreply@boardgaming.icu
     # Mail server settings 
-MAILSERV= # server address
-MAILPORT= # server port
-MAILPASS= # server password
+MAILSERV= # e.g mail.boardgaming.icu
+MAILPORT= # SMTP port
+MAILPASS= # mail password
 MAILUSER= # mail user
+
+# Captcha keys - SITEADDR will be used as the site address.
+PRIVKEY =
+PUBKEY  =
